--- a/src/styles/base/global.css
+++ b/src/styles/base/global.css
@@ -4,6 +4,8 @@
 body {
   overscroll-behavior: none;
   -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 body.mobile-sidebar-open {
